cli graphics changes