@@ -5,6 +5,7 @@ import it.polimi.ingsw.psp1.santorini.network.Client;
 import it.polimi.ingsw.psp1.santorini.network.packets.client.ClientToggleInteraction;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class CommandInteract extends Command {
 
@@ -13,7 +14,7 @@ public class CommandInteract extends Command {
                 "Activates your God's power, if possible",
                 "",
                 "",
-                Arrays.asList("usepower", "power"));
+                List.of("usepower", "power"));
     }
 
     @Override
@@ -23,6 +24,7 @@ public class CommandInteract extends Command {
             client.sendPacket(new ClientToggleInteraction());
             return "Activated power";
         }
-        return "Command not available";
+
+        return "Command not available in this state";
     }
 }
