@@ -5,6 +5,7 @@ import it.polimi.ingsw.psp1.santorini.network.Client;
 import it.polimi.ingsw.psp1.santorini.network.packets.client.ClientRequestGameData;
 
 import java.util.Arrays;
+import java.util.List;
 
 public class CommandReload extends Command {
 
@@ -13,7 +14,7 @@ public class CommandReload extends Command {
                 "Sends the current map and all available info to the player",
                 "",
                 "",
-                Arrays.asList("r", "clear"));
+                List.of("r", "clear"));
     }
 
     @Override
