@@ -1,6 +1,7 @@
 package it.polimi.ingsw.psp1.santorini.cli.commands;
 
 import it.polimi.ingsw.psp1.santorini.cli.CLIServerHandler;
+import it.polimi.ingsw.psp1.santorini.model.map.Worker;
 import it.polimi.ingsw.psp1.santorini.network.Client;
 import it.polimi.ingsw.psp1.santorini.network.packets.client.ClientSelectSquare;
 import it.polimi.ingsw.psp1.santorini.network.packets.client.ClientSelectWorker;
@@ -8,6 +9,8 @@ import it.polimi.ingsw.psp1.santorini.network.packets.client.ClientSelectWorker;
 import java.awt.*;
 import java.util.Arrays;
 import java.util.Collection;
+import java.util.List;
+import java.util.stream.Collectors;
 
 public class CommandSelectWorker extends Command {
 
@@ -16,19 +19,22 @@ public class CommandSelectWorker extends Command {
                 "Chooses the worker you want to use in this turn",
                 " <x> <y> / <n-move>",
                 "",
-                Arrays.asList("sw", "sworker"));
+                List.of("sw", "sworker"));
     }
 
     @Override
     public String onCommand(Client client, CLIServerHandler serverHandler, String input, String[] arguments) {
+        List<Point> validMoves = serverHandler.getPlayerData().getWorkers().stream()
+                .map(Worker::getPosition).collect(Collectors.toList());
+
         if (arguments.length == 1) {
             int i = Integer.parseInt(arguments[0]) - 1;
 
-            if (i < 0 || i >= serverHandler.getValidMoves().size()) {
+            if (i < 0 || i >= validMoves.size()) {
                 return "Invalid move";
             }
 
-            Point point = serverHandler.getValidMoves().get(i);
+            Point point = validMoves.get(i);
 
             if (serverHandler.getBlockedMoves().values().stream()
                     .flatMap(Collection::stream).anyMatch(p -> p.equals(point))) {
@@ -44,7 +50,7 @@ public class CommandSelectWorker extends Command {
 
             Point point = new Point(x, y);
 
-            if (!serverHandler.getValidMoves().contains(point)) {
+            if (!validMoves.contains(point)) {
                 return "Invalid move";
             }
 
